--- a/collection.html
+++ b/collection.html
@@ -28,11 +28,34 @@
 
     <!-- MAIN CONTENT-->
     <main>
+        <h2>Explore the inner planets</h2>
+        <p>Discover our nearest neighbours in orbit around our star</p>
         <div class="grid">
-            <img src="images/earth.png" alt="">
-            <img src="images/earth.png" alt="">
-            <img src="images/earth.png" alt="">
-            <img src="images/earth.png" alt="">
+            <div>
+                <img src="images/earth.png" alt="">
+                <h2>Moon Light</h2>
+                <p>Currently one of our moons</p>
+                <a href="" class="button">learn more</a>
+            </div>
+            <div>
+                <img src="images/earth.png" alt="">
+                <h2>Moon Light</h2>
+                <p>Currently one of our moons</p>
+                <a href="">learn more</a>
+            </div>
+            <div>
+                <img src="images/earth.png" alt="">
+                <h2>Moon Light</h2>
+                <p>Currently one of our moons</p>
+                <a href="">learn more</a>
+            </div>
+            <div>
+                <img src="images/earth.png" alt="">
+                <h2>Moon Light</h2>
+                <p>Currently one of our moons</p>
+                <a href="">learn more</a>
+            </div>
+
         </div>
     </main>
 
