--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
   </header>
 
   <main>
-    <h1>The Inner Plannet</h1>
-    <p>The celestial object that we call home is one of four planets that orbit close
-      to the sun in the inner solar System. We share this part of space with three
-      other planetary friends.</p>
+    <div class="max-width">
+      <h1>The Inner Plannet</h1>
+      <p>The celestial object that we call home is one of four planets that orbit close
+        to the sun in the inner solar System. We share this part of space with three
+        other planetary friends.</p>
 
-    <a href="collection.html" class="button">Meet our neighbour</a>
+      <a href="collection.html" class="button">Meet our neighbour</a>
+    </div>
   </main>
 
 
