--- a/collection.html
+++ b/collection.html
@@ -27,7 +27,7 @@
 
 
     <!-- MAIN CONTENT-->
-    <main>
+    <main class="center-content">
         <h2>Explore the inner planets</h2>
         <p>Discover our nearest neighbours in orbit around our star</p>
         <div class="grid">
@@ -41,21 +41,21 @@
                 <img src="images/earth.png" alt="">
                 <h2>Moon Light</h2>
                 <p>Currently one of our moons</p>
-                <a href="">learn more</a>
+                <a href="" class="button">learn more</a>
             </div>
             <div>
                 <img src="images/earth.png" alt="">
                 <h2>Moon Light</h2>
                 <p>Currently one of our moons</p>
-                <a href="">learn more</a>
+                <a href="" class="button">learn more</a>
             </div>
             <div>
                 <img src="images/earth.png" alt="">
                 <h2>Moon Light</h2>
                 <p>Currently one of our moons</p>
-                <a href="">learn more</a>
+                <a href="" class="button">learn more</a>
             </div>
-
+            
         </div>
     </main>
 
