--- a/collection.html
+++ b/collection.html
@@ -32,27 +32,27 @@
         <p>Discover our nearest neighbours in orbit around our star</p>
         <div class="grid">
             <div>
-                <img src="images/earth.png" alt="">
-                <h2>Moon Light</h2>
-                <p>Currently one of our moons</p>
+                <img src="images/mercury.png" alt="">
+                <h2>Mercury</h2>
+                <p>Closest to the sun</p>
+                <a href="" class="button">learn more</a>
+            </div>
+            <div>
+                <img src="images/venus.png" alt="">
+                <h2>Venus</h2>
+                <p>Second from the sun</p>
                 <a href="" class="button">learn more</a>
             </div>
             <div>
                 <img src="images/earth.png" alt="">
-                <h2>Moon Light</h2>
-                <p>Currently one of our moons</p>
+                <h2>Earth</h2>
+                <p>Our lovely home.</p>
                 <a href="" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/earth.png" alt="">
-                <h2>Moon Light</h2>
-                <p>Currently one of our moons</p>
-                <a href="" class="button">learn more</a>
-            </div>
-            <div>
-                <img src="images/earth.png" alt="">
-                <h2>Moon Light</h2>
-                <p>Currently one of our moons</p>
+                <img src="images/mars.png" alt="">
+                <h2>Mars</h2>
+                <p>The red planet.</p>
                 <a href="" class="button">learn more</a>
             </div>
             
