--- a/collection.html
+++ b/collection.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>
+<body class="home">
 
 
 
@@ -28,32 +28,35 @@
 
     <!-- MAIN CONTENT-->
     <main class="center-content">
-        <h2>Explore the inner planets</h2>
-        <p>Discover our nearest neighbours in orbit around our star</p>
+        <h2>Explore My Portfolio</h2>
+        <p>Learn more the project Oghenefuyere Spends hours to work on.</p>
         <div class="grid">
             <div>
-                <img src="images/mercury.png" alt="">
-                <h2>Mercury</h2>
-                <p>Closest to the sun</p>
-                <a href="" class="button">learn more</a>
+                <img src="images/DSC_0100.jpg" alt="">
+                <h2>Photography</h2>
+                <p>Nature explore photography exploring the environment and using Adobe Lightroom to enhance the photo
+                </p>
+                <a href="images/DSC_0100.jpg" target="_blank" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/venus.png" alt="">
-                <h2>Venus</h2>
-                <p>Second from the sun</p>
-                <a href="" class="button">learn more</a>
+                <img src="images/preview.png" alt="">
+                <h2>Website</h2>
+                <p>Explore Adobe Photoshop to design a photography website for college project that meet the requirement
+                </p>
+                <a href="images/okiotorhoroo01_website.png" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/earth.png" alt="">
-                <h2>Earth</h2>
-                <p>Our lovely home.</p>
-                <a href="" class="button">learn more</a>
+                <img src="images/golden_skull.png" alt="">
+                <h2>Golden Skull</h2>
+                <p>Explore Adobe Illustration to design a a golden skull for college project that meet the requirement
+                </p>
+                <a href="images/golden_skull.png" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/mars.png" alt="">
-                <h2>Mars</h2>
-                <p>The red planet.</p>
-                <a href="" class="button">learn more</a>
+                <img src="images/logo_design.png" alt="">
+                <h2>Logo</h2>
+                <p>Explore Adobe illustrator to design a logo for college project that meet the requirement</p>
+                <a href="images/logo_design.png" class="button">learn more</a>
             </div>
 
         </div>
