--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 
   <main>
     <div class="max-width">
-      <h1>The Inner Plannet</h1>
-      <p>The celestial object that we call home is one of four planets that orbit close
-        to the sun in the inner solar System. We share this part of space with three
-        other planetary friends.</p>
+      <h1>Welcome</h1>
+      <p>Oghenefuyere Okiotorhoro is an exceptionally motivated, client-focused individual with expertise in web
+        developments, UX design, and graphic design. He is a brilliantly curious problem-solver, adaptable, and an
+        endless learner. In his free time, Oghenefuyere enjoys researching industrial technology and design, as well
+        as spending quality time outdoors with family.</p>
 
-      <a href="collection.html" class="button">Meet our neighbour</a>
+      <a href="collection.html" class="button">Explore My Projects</a>
     </div>
   </main>
 
