--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!-- COLLECTION -->
-
 <!DOCTYPE html>
 
 <head>
-  <title>The Plannets</title>
+  <title>Oghenefuyere Okiotorhoro Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
