--- a/collection.html
+++ b/collection.html
@@ -20,7 +20,7 @@
 
     <!-- HEADER -->
     <header>
-        <img src="images/collection-icon.svg" alt="">
+        <img src="images/collection-icon.svg" alt="icon">
         <a href="index.html">Home</a>
         <a href="collection.html">Collection</a>
     </header>
@@ -32,7 +32,7 @@
         <p>Learn more the project Oghenefuyere Spends hours to work on.</p>
         <div class="grid">
             <div>
-                <img src="images/DSC_0100.jpg" alt="">
+                <img src="images/DSC_0100.jpg" alt="photography image">
                 <h2>Photography</h2>
                 <p>Nature explore photography exploring the environment and using Adobe Lightroom to enhance the photo
                 </p>
@@ -43,20 +43,20 @@
                 <h2>Website</h2>
                 <p>Explore Adobe Photoshop to design a photography website for college project that meet the requirement
                 </p>
-                <a href="images/okiotorhoroo01_website.png" class="button">learn more</a>
+                <a href="images/okiotorhoroo01_website.png" target="_blank" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/golden_skull.png" alt="">
+                <img src="images/golden_skull.png" alt="golden skull image">
                 <h2>Golden Skull</h2>
                 <p>Explore Adobe Illustration to design a a golden skull for college project that meet the requirement
                 </p>
-                <a href="images/golden_skull.png" class="button">learn more</a>
+                <a href="images/golden_skull.png" target="_blank" class="button">learn more</a>
             </div>
             <div>
-                <img src="images/logo_design.png" alt="">
+                <img src="images/logo_design.png" alt="logo design">
                 <h2>Logo</h2>
                 <p>Explore Adobe illustrator to design a logo for college project that meet the requirement</p>
-                <a href="images/logo_design.png" class="button">learn more</a>
+                <a href="images/logo_design.png" target="_blank" class="button">learn more</a>
             </div>
 
         </div>
